--- a/index.html
+++ b/index.html
@@ -83,14 +83,18 @@
             <div class="experience-content">
                 <h3>Back-End Web Programmer (Nov 2022 - Dec 2022)</h3>
                 <h4>PT. Pusaka Media Nusantara</h4>
-                <p><span>-</span> Create a back-end local web bank data with two privileges intended for Kecamatan Bekasi Utara Staff 
-                    and all of Staff Kelurahan at Kecamatan Bekasi Utara.</p>
-                <p><span>-</span> Conduct trials using the black-box testing method before the website is submitted to the agency</p>
-                <p><span>-</span> Entry data for each keluarahan in Kecamatan Bekasi Utara</p>
+                <ul>
+                    <li>Create a back-end local web bank data with two privileges intended for Kecamatan Bekasi Utara Staff 
+                        and all of Staff Kelurahan at Kecamatan Bekasi Utara.</li>
+                    <li>Conduct trials using the black-box testing method before the website is submitted to the agency</li>
+                    <li>Entry data for each keluarahan in Kecamatan Bekasi Utara</li>
+                </ul>   
                 <h3>Data Entry Operator (Jun 2021 - Jul 2021)</h3>
                 <h4>PT. Pusaka Media Nusantara</h4>
-                <p><span>-</span> Entry Data for public whos applied business and non-business permits</p>
-                <p><span>-</span> Search data public business and non-business permits</p>
+                <ul>
+                    <li>Entry Data for public whos applied business and non-business permits</li>
+                    <li>Search data public business and non-business permits</li>
+                </ul>
             </div>
         </div>
         <div class="row">
@@ -100,9 +104,11 @@
             <div class="experience-content">
                 <h3>IT System Support (Aug 2022 - Nov 2022)</h3>
                 <h4>DPMPTSP Kota Bekasi</h4>
-                <P><span>-</span> Solve Problem Agency's Web</P>               
-                <P><span>-</span> Analysis of Device Maintenance in agency</P>
-                <P><span>-</span> Create Back-end Website for Maintenancing Device</P>
+                <ul>
+                    <li>Solve Problem Agency's Web</li>               
+                    <li>Analysis of Device Maintenance in agency</li>
+                    <li>Create Back-end Website for Maintenancing Device</li>
+            </ul>
             </div>
         </div>
     </section>
@@ -120,16 +126,18 @@
                 <img src="img/icon/html.svg" alt="">
                 <img src="img/icon/css.svg" alt="">
                 <img src="img/icon/js.svg" alt="">
-                <img src="img/icon/php.svg" alt="">
+                <img src="img/icon/php1.svg" alt="">
                 <img src="img/icon/python.svg" alt="">
                 <img src="img/icon/bootstrap.svg" alt="">
+                <img src="img/icon/Tailwind.svg" alt="">
                 <img src="img/icon/codeigniter.svg" alt="">
                 <img src="img/icon/vsc.svg" alt="">
                 <img src="img/icon/nb.svg" alt="">
                 <img src="img/icon/pycharm.svg" alt="">
+                <img src="img/icon/git.svg" alt="">
                 <img src="img/icon/phpmyadmin.svg" alt="">
                 <img src="img/icon/navicat2.svg" alt="">
-                <img src="img/icon/mysql.svg" alt="">
+                <img src="img/icon/mysql1.svg" alt="">
             </div>
         </div>
     </section> 
@@ -153,10 +161,10 @@
                     <h3>Pustaka Booking</h3>
                     <p>Simple Website used HTML, CSS, Bootstrap for rent a book</p>
                     <div class="portfolio-project">
-                        <img src="img/html.svg" alt="">
-                        <img src="img/css.svg" alt="">
-                        <img src="img/bootstrap.svg" alt="">
-                        <img src="img/codeigniter.svg" alt="">
+                        <img src="img/icon/html.svg" alt="">
+                        <img src="img/icon/css.svg" alt="">
+                        <img src="img/icon/bootstrap.svg" alt="">
+                        <img src="img/icon/codeigniter.svg" alt="">
                     </div>
                 </div>
             </div>
@@ -171,12 +179,12 @@
                     <h3>Rekam Device DPMPTSP Kota Bekasi</h3>
                     <p>Back-end website for maintenancing device in DPMPTSP Kota Bekasi</p>
                     <div class="portfolio-project">
-                        <img src="img/php.svg" alt="">
-                        <img src="img/html.svg" alt="">
-                        <img src="img/js.svg" alt="">
-                        <img src="img/css.svg" alt="">
-                        <img src="img/bootstrap.svg" alt="">
-                        <img src="img/codeigniter.svg" alt="">
+                        <img src="img/icon/php.svg" alt="">
+                        <img src="img/icon/html.svg" alt="">
+                        <img src="img/icon/js.svg" alt="">
+                        <img src="img/icon/css.svg" alt="">
+                        <img src="img/icon/bootstrap.svg" alt="">
+                        <img src="img/icon/codeigniter.svg" alt="">
                     </div>
                 </div>
             </div>
@@ -191,12 +199,12 @@
                     <h3>Bank Data Kecamatan Bekasi Utara</h3>
                     <p>Back-end website Bank Data Kecamatan Bekasi Utara for processing data</p>
                     <div class="portfolio-project">
-                        <img src="img/php.svg" alt="">
-                        <img src="img/html.svg" alt="">
-                        <img src="img/js.svg" alt="">
-                        <img src="img/css.svg" alt="">
-                        <img src="img/bootstrap.svg" alt="">
-                        <img src="img/codeigniter.svg" alt="">
+                        <img src="img/icon/php.svg" alt="">
+                        <img src="img/icon/html.svg" alt="">
+                        <img src="img/icon/js.svg" alt="">
+                        <img src="img/icon/css.svg" alt="">
+                        <img src="img/icon/bootstrap.svg" alt="">
+                        <img src="img/icon/codeigniter.svg" alt="">
                     </div>
                 </div>
             </div>
@@ -206,7 +214,7 @@
 
     <!--  contact secction starts  -->
     <section id="contact" class="contact">
-        <h2><span>My</span> Contact</h2>
+        <h2><span>Contact</span> Me</h2>
         <p>Get in Touch!</p>
         <div class="row">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253813.82942771868!2d106.8053103590144!3d-6.284610400640212!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e698d8546ad633d%3A0x79e8de8965402078!2sKota%20Bks%2C%20Jawa%20Barat!5e0!3m2!1sid!2sid!4v1703179411710!5m2!1sid!2sid" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
@@ -245,7 +253,7 @@
             <a href="#contact">Contact</a>
         </div>
         <div class="credit">
-            <p>Created by <a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcRwQnVdRGfBMXPsfbthbfDgPVRKTCbbzvxqRnMQNLQxlGbmNQKTsPwRdHcbjDbZDDdLBQZdK">jerryramadhan.</a> | &copy 2023</p>
+            <p>Created by <a href="mailto:jerrymramadhan@gmail.com">jerryramadhan.</a> | &copy 2023</p>
         </div>
     </footer>
     <!--  footer ends -->
